@@ -1,8 +1,10 @@
 package prerna.reactor;
 
 import java.io.File;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Modifier;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
@@ -18,10 +20,6 @@ import io.github.classgraph.ClassGraph;
 import io.github.classgraph.ClassInfoList;
 import io.github.classgraph.ScanResult;
 import prerna.algorithm.api.ITableDataFrame;
-import prerna.aws.s3.PushAssetToS3Reactor;
-import prerna.aws.s3.S3FileRetrieverReactor;
-import prerna.aws.s3.S3ListBucketsReactor;
-import prerna.aws.s3.S3ListFilesReactor;
 import prerna.date.reactor.DateReactor;
 import prerna.date.reactor.DayReactor;
 import prerna.date.reactor.MonthReactor;
@@ -32,8 +30,10 @@ import prerna.ds.nativeframe.NativeFrame;
 import prerna.ds.py.PandasFrame;
 import prerna.ds.r.RDataTable;
 import prerna.ds.rdbms.AbstractRdbmsFrame;
+import prerna.engine.api.IEngine;
 import prerna.forms.UpdateFormReactor;
 import prerna.io.connector.surveymonkey.SurveyMonkeyListSurveysReactor;
+import prerna.om.Insight;
 import prerna.poi.main.helper.excel.GetExcelFormReactor;
 import prerna.query.querystruct.delete.DeleteReactor;
 import prerna.query.querystruct.update.reactors.UpdateReactor;
@@ -130,7 +130,6 @@ import prerna.reactor.export.ToCsvReactor;
 import prerna.reactor.export.ToDatabaseReactor;
 import prerna.reactor.export.ToExcelReactor;
 import prerna.reactor.export.ToLoaderSheetReactor;
-import prerna.reactor.export.ToS3Reactor;
 import prerna.reactor.export.ToTsvReactor;
 import prerna.reactor.export.ToTxtReactor;
 import prerna.reactor.expression.IfError;
@@ -222,7 +221,6 @@ import prerna.reactor.insights.save.SetInsightCacheableReactor;
 import prerna.reactor.insights.save.SetInsightNameReactor;
 import prerna.reactor.insights.save.UpdateInsightImageReactor;
 import prerna.reactor.insights.save.UpdateInsightReactor;
-import prerna.reactor.job.JobReactor;
 import prerna.reactor.masterdatabase.AllConceptualNamesReactor;
 import prerna.reactor.masterdatabase.CLPModelReactor;
 import prerna.reactor.masterdatabase.GetConceptPropertiesReactor;
@@ -346,7 +344,6 @@ import prerna.reactor.task.RemoveTaskReactor;
 import prerna.reactor.task.ResetTaskReactor;
 import prerna.reactor.task.TaskOptionsReactor;
 import prerna.reactor.task.TaskReactor;
-import prerna.reactor.task.lambda.map.MapLambdaReactor;
 import prerna.reactor.task.lambda.map.function.ApplyFormattingReactor;
 import prerna.reactor.task.modifiers.CodeLambdaReactor;
 import prerna.reactor.task.modifiers.FilterLambdaReactor;
@@ -418,92 +415,91 @@ import prerna.util.usertracking.reactors.recommendations.VizRecommendationsReact
 public class ReactorFactory {
 
 	private static final Logger classLogger = LogManager.getLogger(ReactorFactory.class);
-	
+
 	// This holds the reactors that are frame agnostic and can be used by pixel
-	public static Map<String, Class> reactorHash;
+	public static Map<String, Class<? extends IReactor>> reactorHash;
 
 	// This holds the reactors that are expressions
 	// example Sum, Max, Min
 	// the reactors will handle how to execute
 	// if it can be run via the frame (i.e. sql/gremlin) or needs to run external
-	public static Map<String, Class> expressionHash;
+	public static Map<String, Class<? extends IReactor>> expressionHash;
 
 	// this holds that base package name for frame specific reactors
-	public static Map<String, Class> rFrameHash;
-	public static Map<String, Class> pandasFrameHash;
-	public static Map<String, Class> h2FrameHash;
-	public static Map<String, Class> tinkerFrameHash;
-	public static Map<String, Class> nativeFrameHash;
-	
-	public static Map <String, Class> reactors = new HashMap<String, Class>();
-	
-	public static List <String> nmList = new ArrayList<String>();
-	public static List <Class> classList = new ArrayList<Class>();
+	public static Map<String, Class<? extends IReactor>> rFrameHash;
+	public static Map<String, Class<? extends IReactor>> pandasFrameHash;
+	public static Map<String, Class<? extends IReactor>> h2FrameHash;
+	public static Map<String, Class<? extends IReactor>> tinkerFrameHash;
+	public static Map<String, Class<? extends IReactor>> nativeFrameHash;
+
+	public static Map<String, Class<? extends IReactor>> reactors = new HashMap<String, Class<? extends IReactor>>();
+
+	public static List<String> nmList = new ArrayList<String>();
+	public static List<Class<? extends IReactor>> classList = new ArrayList<Class<? extends IReactor>>();
 	public static boolean write = true;
-	
+
 	static {
-		reactorHash = new HashMap<String, Class>();
+		reactorHash = new HashMap<String, Class<? extends IReactor>>();
 		createReactorHash(reactorHash);
 		// build expression hash
-		expressionHash = new HashMap<String, Class>();
+		expressionHash = new HashMap<String, Class<? extends IReactor>>();
 		populateExpressionSet(expressionHash);
 		// populate the frame specific hashes
-		rFrameHash = new HashMap<String, Class>();
-		//populateRFrameHash(rFrameHash);
-		pandasFrameHash = new HashMap<String, Class>();
-		//populatePandasFrameHash(pandasFrameHash);
-		h2FrameHash = new HashMap<String, Class>();
-		//populateH2FrameHash(h2FrameHash);
-		tinkerFrameHash = new HashMap<String, Class>();
-		//populateTinkerFrameHash(tinkerFrameHash);
-		nativeFrameHash = new HashMap<String, Class>();
-		//populateNativeFrameHash(nativeFrameHash);
+		rFrameHash = new HashMap<String, Class<? extends IReactor>>();
+		// populateRFrameHash(rFrameHash);
+		pandasFrameHash = new HashMap<String, Class<? extends IReactor>>();
+		// populatePandasFrameHash(pandasFrameHash);
+		h2FrameHash = new HashMap<String, Class<? extends IReactor>>();
+		// populateH2FrameHash(h2FrameHash);
+		tinkerFrameHash = new HashMap<String, Class<? extends IReactor>>();
+		// populateTinkerFrameHash(tinkerFrameHash);
+		nativeFrameHash = new HashMap<String, Class<? extends IReactor>>();
+		// populateNativeFrameHash(nativeFrameHash);
 
-		
 		String additionalReactorsPath = "";
 		try {
 			additionalReactorsPath = Utility.getDIHelperProperty(Constants.ADDITIONAL_REACTORS);
-			if(additionalReactorsPath != null) {
+			if (additionalReactorsPath != null) {
 				classLogger.info("Loading additional reactors from file");
 				File f = new File(additionalReactorsPath);
-				if(f.exists()) {
+				if (f.exists()) {
 					loadAdditionalReactor(f);
 				}
 			}
-		} catch(Exception e) {
+		} catch (Exception e) {
 			// ignore
 			// this would only be null during testing
 			// and DIHelper isn't loaded
 			// hopefully you dont have anything in a prop file you care about
 			// or update the var directly
 		}
-		
+
 		// load it through the inspect
 		List<String> packagesToLoad = new ArrayList<>();
 		packagesToLoad.add("prerna");
 		String additionalPackages = null;
 		try {
 			additionalPackages = Utility.getDIHelperProperty(Constants.ADDITIONAL_REACTOR_PACKAGES);
-			if(additionalPackages != null && !(additionalPackages=additionalPackages.trim()).isEmpty()) {
+			if (additionalPackages != null && !(additionalPackages = additionalPackages.trim()).isEmpty()) {
 				classLogger.info("Loading additional reactors from packages [" + additionalPackages + "]");
 				String[] packagesArr = additionalPackages.split(",");
-				for(String thisPackage : packagesArr) {
-					if(!(thisPackage=thisPackage.trim()).isEmpty()) {
+				for (String thisPackage : packagesArr) {
+					if (!(thisPackage = thisPackage.trim()).isEmpty()) {
 						packagesToLoad.add(thisPackage);
 					}
 				}
 			}
-		} catch(Exception e) {
+		} catch (Exception e) {
 			// ignore
 			// this would only be null during testing
 			// and DIHelper isn't loaded
 			// hopefully you dont have anything in a prop file you care about
 			// or update the var directly
 		}
-		
+
 		loadFromCP(packagesToLoad.toArray(new String[] {}));
 	}
-	
+
 //	public static void main(String [] args)
 //	{
 //		// print the inconsistencies
@@ -513,74 +509,75 @@ public class ReactorFactory {
 //		printInconsistency("R", rFrameHash);
 //		printInconsistency("Pandas", pandasFrameHash);
 //	}
-	
-	public static void printInconsistency(String mapname, Map map)
-	{
-		
+
+	public static void printInconsistency(String mapname, Map map) {
+
 		Iterator keys = map.keySet().iterator();
-		
+
 		System.out.println(mapname);
 		System.out.println("-----------");
-		
-		while(keys.hasNext())
-		{
-			String key = (String)keys.next();
-			Class value = (Class)map.get(key);
-			
+
+		while (keys.hasNext()) {
+			String key = (String) keys.next();
+			Class value = (Class) map.get(key);
+
 			String name = value.getSimpleName();
 
-			name = name.replaceAll("Reactor","");
-			if(!name.equals(key))
+			name = name.replaceAll("Reactor", "");
+			if (!name.equals(key)) {
 				System.out.println(key + " <<>> " + name);
-			
+			}
+
 		}
 		System.out.println("-----------");
-		
+
 	}
-	
+
 	/**
 	 * Load reactors based on the class path
+	 * 
 	 * @param packages
 	 */
 	private static void loadFromCP(String... packages) {
 		try {
 			ScanResult sr = new ClassGraph().whitelistPackages(packages).scan();
 			ClassInfoList classes = sr.getClassesImplementing(IReactor.class.getName());
-			
-			for(int classIndex = 0;classIndex < classes.size();classIndex++) {
+
+			for (int classIndex = 0; classIndex < classes.size(); classIndex++) {
 				String name = classes.get(classIndex).getSimpleName();
 				String packageName = classes.get(classIndex).getPackageName();
 				Class actualClass = classes.get(classIndex).loadClass();
 
-				// ignore abstract
-				if(!Modifier.isAbstract( actualClass.getModifiers() )) {
-					String [] packagePaths = packageName.split("\\.");
-					//System.out.println("Package name " + packageName);
+				// ignore abstract and engines
+				if (!Modifier.isAbstract(actualClass.getModifiers())
+						&& !Arrays.asList(actualClass.getInterfaces()).contains(IEngine.class)) {
+					String[] packagePaths = packageName.split("\\.");
+					// System.out.println("Package name " + packageName);
 					packageName = packagePaths[packagePaths.length - 1];
 					boolean frame = false;
 					if (packagePaths.length > 2) {
 						frame = packagePaths[packagePaths.length - 2].equalsIgnoreCase("frame");
 					}
-					// we will allow for 1 more level 
+					// we will allow for 1 more level
 					// i.e. things of the form so *.frame.r.?
-					if(!frame && packagePaths.length > 3) {
+					if (!frame && packagePaths.length > 3) {
 						packageName = packagePaths[packagePaths.length - 2];
 						frame = packagePaths[packagePaths.length - 3].equalsIgnoreCase("frame");
 					}
 					String reactorName = name;
 					final String REACTOR_KEY = "REACTOR";
-					if(reactorName.toUpperCase().endsWith(REACTOR_KEY)) {
-						reactorName = reactorName.substring(0, reactorName.length()-REACTOR_KEY.length());
+					if (reactorName.toUpperCase().endsWith(REACTOR_KEY)) {
+						reactorName = reactorName.substring(0, reactorName.length() - REACTOR_KEY.length());
 					}
-					
-					if(frame) {
-						if(packageName.equalsIgnoreCase("rdbms")) {
+
+					if (frame) {
+						if (packageName.equalsIgnoreCase("rdbms")) {
 							h2FrameHash.put(reactorName, actualClass);
-						} else if(packageName.equalsIgnoreCase("r")) {
+						} else if (packageName.equalsIgnoreCase("r")) {
 							rFrameHash.put(reactorName, actualClass);
-						} else if(packageName.equalsIgnoreCase("py")) {
+						} else if (packageName.equalsIgnoreCase("py")) {
 							pandasFrameHash.put(reactorName, actualClass);
-						} else if(packageName.equalsIgnoreCase("tinker") || packageName.equalsIgnoreCase("graph")) {
+						} else if (packageName.equalsIgnoreCase("tinker") || packageName.equalsIgnoreCase("graph")) {
 							tinkerFrameHash.put(reactorName, actualClass);
 						} else {// nullify the package name
 							packageName = null;
@@ -588,7 +585,7 @@ public class ReactorFactory {
 							// example - frame filters
 							reactorHash.put(reactorName, actualClass);
 						}
-						if(packageName != null) {
+						if (packageName != null) {
 							reactorName = packageName + "_" + reactorName;
 						}
 					} else {
@@ -596,7 +593,7 @@ public class ReactorFactory {
 					}
 					nmList.add(reactorName);
 					classList.add(actualClass);
-					
+
 					reactors.put(reactorName.toUpperCase(), actualClass);
 				}
 			}
@@ -604,38 +601,20 @@ public class ReactorFactory {
 			classLogger.error(Constants.STACKTRACE, e);
 		}
 	}
-	
-/*	public static void writeReacFile()
-	{
-		if(write)
-		{
-			String reacFileName = "c:/users/pkapaleeswaran/workspacej3/temp/reactornames.txt";
-			System.err.println("Writing file.. ");
-			try {
-				PrintWriter br = new PrintWriter(new OutputStreamWriter(new FileOutputStream(reacFileName)));
-				Iterator rIt = reactors.keySet().iterator();
-				while(rIt.hasNext())
-					br.write(rIt.next().toString() + "\n");
-				{
-				}
-				br.flush();
-				br.close();
-				write = false;
-			} catch (FileNotFoundException e) {
-				// TODO Auto-generated catch block
-				classLogger.error(Constants.STACKTRACE, e);
-			} catch (IOException e) {
-				// TODO Auto-generated catch block
-				classLogger.error(Constants.STACKTRACE, e);
-			}
-		}
-	}
-*/	
-	// populates the frame agnostic reactors used by pixel
-	private static void createReactorHash(Map<String, Class> reactorHash) {
-		// used to generate the base Job for the pksl commands being executed
-		reactorHash.put("Job", JobReactor.class); // defines the job
 
+	/*
+	 * public static void writeReacFile() { if(write) { String reacFileName =
+	 * "c:/users/pkapaleeswaran/workspacej3/temp/reactornames.txt";
+	 * System.err.println("Writing file.. "); try { PrintWriter br = new
+	 * PrintWriter(new OutputStreamWriter(new FileOutputStream(reacFileName)));
+	 * Iterator rIt = reactors.keySet().iterator(); while(rIt.hasNext())
+	 * br.write(rIt.next().toString() + "\n"); { } br.flush(); br.close(); write =
+	 * false; } catch (FileNotFoundException e) { // TODO Auto-generated catch block
+	 * classLogger.error(Constants.STACKTRACE, e); } catch (IOException e) { // TODO
+	 * Auto-generated catch block classLogger.error(Constants.STACKTRACE, e); } } }
+	 */
+	// populates the frame agnostic reactors used by pixel
+	private static void createReactorHash(Map<String, Class<? extends IReactor>> reactorHash) {
 		// Import Reactors
 		// takes in a query struct and imports data to a new frame
 		reactorHash.put("Import", ImportReactor.class);
@@ -664,7 +643,7 @@ public class ReactorFactory {
 		reactorHash.put("DeleteInsightCache", DeleteInsightCacheReactor.class);
 		reactorHash.put("WidgetT", WidgetTReactor.class);
 		reactorHash.put("GetUserInfo", GetUserInfoReactor.class);
-		
+
 		// Database uploading utils
 		reactorHash.put("CheckHeaders", CheckHeadersReactor.class);
 		reactorHash.put("PredictDataTypes", PredictDataTypesReactor.class);
@@ -673,10 +652,10 @@ public class ReactorFactory {
 		reactorHash.put("ParseMetamodel", ParseMetamodelReactor.class);
 		reactorHash.put("ExtractAppMeta", ExtractDatabaseMetaReactor.class);
 		reactorHash.put("NLPInstanceCache", NLPInstanceCacheReactor.class);
-		
+
 		// Excel Data validation
 		reactorHash.put("GetExcelForm", GetExcelFormReactor.class);
-		
+
 		// Database Uploading
 		reactorHash.put("ExternalJdbcSchema", ExternalJdbcSchemaReactor.class);
 		reactorHash.put("ExternalJdbcTablesAndViews", ExternalJdbcTablesAndViewsReactor.class);
@@ -692,7 +671,7 @@ public class ReactorFactory {
 //		reactorHash.put("CatalogDescriptionGenerator", CatalogDescriptionGeneratorReactor.class);
 //		reactorHash.put("SimilarCatalog", SimilarCatalogReactor.class);
 //		reactorHash.put("CatalogSearch", CatalogSearchReactor.class);
-			
+
 		// external graph engine
 		reactorHash.put("GetGraphProperties", GetGraphPropertiesReactor.class);
 		reactorHash.put("GetGraphMetaModel", GetGraphMetaModelReactor.class);
@@ -705,7 +684,7 @@ public class ReactorFactory {
 		reactorHash.put("GetJanusGraphProperties", GetJanusGraphPropertiesReactor.class);
 		reactorHash.put("GetJanusGraphMetaModel", GetJanusGraphMetaModelReactor.class);
 		reactorHash.put("CreateJanusGraphDatabase", CreateJanusGraphDatabaseReactor.class);
-		
+
 		// Query Struct Reactors
 		// builds the select portion of the QS
 		reactorHash.put("With", WithReactor.class);
@@ -748,9 +727,10 @@ public class ReactorFactory {
 		reactorHash.put("Delete", DeleteReactor.class);
 		reactorHash.put("Update", UpdateReactor.class);
 		reactorHash.put("ExecQuery", ExecQueryReactor.class);
-		
+
 		// Data Source Reactors
-		// specifies that our pixel operations after this point are dealing with the specified database
+		// specifies that our pixel operations after this point are dealing with the
+		// specified database
 		reactorHash.put("Database", DatabaseReactor.class);
 		reactorHash.put("AuditDatabase", AuditDatabaseReactor.class);
 		reactorHash.put("API", APIReactor.class);
@@ -770,12 +750,6 @@ public class ReactorFactory {
 		reactorHash.put("GoogleUploader", GoogleUploaderReactor.class);
 		reactorHash.put("GoogleListFiles", GoogleListFilesReactor.class);
 		reactorHash.put("GoogleFileRetriever", GoogleFileRetrieverReactor.class);
-		//S3
-		reactorHash.put("S3FileRetriever", S3FileRetrieverReactor.class);
-		reactorHash.put("ToS3", ToS3Reactor.class);
-		reactorHash.put("PushAssetToS3", PushAssetToS3Reactor.class);
-		reactorHash.put("S3ListBuckets", S3ListBucketsReactor.class);
-		reactorHash.put("S3ListFiles", S3ListFilesReactor.class);
 
 		// share point
 		reactorHash.put("SharePointListFiles", SharePointListFilesReactor.class);
@@ -786,8 +760,9 @@ public class ReactorFactory {
 		// survey monkey
 		reactorHash.put("SurveyMonkeyListSurveys", SurveyMonkeyListSurveysReactor.class);
 		reactorHash.put("NaturalLanguageSearch", NaturalLanguageSearchReactor.class);
-		
-		// specifies that our pixel operations after this point are dealing with the specified frame
+
+		// specifies that our pixel operations after this point are dealing with the
+		// specified frame
 		reactorHash.put("Frame", FrameReactor.class);
 		reactorHash.put("CreateFrame", CreateFrameReactor.class);
 		reactorHash.put("FrameType", FrameTypeReactor.class);
@@ -795,7 +770,7 @@ public class ReactorFactory {
 		reactorHash.put("GenerateFrameFromRVariable", GenerateFrameFromRVariableReactor.class);
 		reactorHash.put("GenerateFrameFromPyVariable", GenerateFrameFromPyVariableReactor.class);
 		reactorHash.put("GenerateH2FrameFromRVariable", GenerateH2FrameFromRVariableReactor.class);
-		//reactorHash.put("SynchronizeToR", SynchronizeToRReactor.class);
+		// reactorHash.put("SynchronizeToR", SynchronizeToRReactor.class);
 
 		// Task Reactors
 		reactorHash.put("Iterate", IterateReactor.class);
@@ -819,11 +794,10 @@ public class ReactorFactory {
 		reactorHash.put("ToExcel", ToExcelReactor.class); // take any task and output to a file
 		reactorHash.put("ToDatabase", ToDatabaseReactor.class);
 		reactorHash.put("ToLoaderSheet", ToLoaderSheetReactor.class);
-		
+
 		// Task Operations
 		reactorHash.put("CodeLambda", CodeLambdaReactor.class);
 		reactorHash.put("FlatMapLambda", FlatMapLambdaReactor.class);
-		reactorHash.put("MapLambda", MapLambdaReactor.class);
 		reactorHash.put("FilterLambda", FilterLambdaReactor.class);
 		reactorHash.put("ToNumericType", ToNumericTypeReactor.class);
 		reactorHash.put("ToUrlType", ToUrlTypeReactor.class);
@@ -837,7 +811,7 @@ public class ReactorFactory {
 		reactorHash.put("GetTraversalOptions", GetTraversalOptionsReactor.class);
 		reactorHash.put("GetDatabaseMetamodel", GetDatabaseMetamodelReactor.class);
 		reactorHash.put("GetConceptProperties", GetConceptPropertiesReactor.class);
-		
+
 		// NEW FEDERATE
 		reactorHash.put("GetDatabaseConnections", GetDatabaseConnectionsReactor.class);
 		reactorHash.put("GetDatabaseTableStructure", GetDatabaseTableStructureReactor.class);
@@ -848,7 +822,7 @@ public class ReactorFactory {
 		// depcreated
 		reactorHash.put("FederationBlend", FederationBlend.class);
 		reactorHash.put("FederationBestMatches", FederationBestMatches.class);
-		
+
 		// app meta and local master utilities
 		reactorHash.put("ReloadDatabaseOwl", ReloadDatabaseOwlReactor.class);
 		reactorHash.put("GetOwlMetamodel", GetOwlMetamodelReactor.class);
@@ -863,7 +837,7 @@ public class ReactorFactory {
 		reactorHash.put("AddOwlRelationship", AddOwlRelationshipReactor.class);
 		reactorHash.put("AddBulkOwlRelationships", AddBulkOwlRelationshipsReactor.class);
 		reactorHash.put("RemoveOwlRelationship", RemoveOwlRelationshipReactor.class);
-		// conceptual names 
+		// conceptual names
 		reactorHash.put("EditOwlConceptConceptualName", EditOwlConceptConceptualNameReactor.class);
 		reactorHash.put("EditOwlPropertyConceptualName", EditOwlPropertyConceptualNameReactor.class);
 		// data types
@@ -886,7 +860,7 @@ public class ReactorFactory {
 		reactorHash.put("FindIndirectOwlRelationships", FindIndirectOwlRelationshipsReactor.class);
 		reactorHash.put("FindSemanticColumnOwlRelationships", FindSemanticColumnOwlRelationshipsReactor.class);
 		reactorHash.put("FindSemanticInstanceOwlRelationships", FindSemanticInstanceOwlRelationshipsReactor.class);
-		
+
 		reactorHash.put("SyncDatabaseWithLocalMaster", SyncDatabaseWithLocalMasterReactor.class);
 		reactorHash.put("QueryTranslator", QueryTranslatorReactor.class);
 		reactorHash.put("AllConceptualNames", AllConceptualNamesReactor.class);
@@ -902,7 +876,7 @@ public class ReactorFactory {
 //		reactorHash.put("AddMetaTags", AddMetaTagsReactor.class);
 //		reactorHash.put("GetMetaTags", GetMetaTagsReactor.class);
 //		reactorHash.put("DeleteMetaTags", DeleteMetaTagsReactor.class);
-		
+
 		// Panel Reactors
 		reactorHash.put("InsightPanelIds", InsightPanelIds.class);
 		reactorHash.put("Panel", PanelReactor.class);
@@ -949,7 +923,7 @@ public class ReactorFactory {
 		reactorHash.put("RetrievePanelColorByValue", RetrievePanelColorByValueReactor.class);
 		reactorHash.put("RemovePanelColorByValue", RemovePanelColorByValueReactor.class);
 		reactorHash.put("GetPanelColorByValue", GetPanelColorByValueReactor.class);
-		
+
 		// new tab in browser
 		reactorHash.put("OpenTab", OpenTabReactor.class);
 
@@ -969,7 +943,7 @@ public class ReactorFactory {
 		reactorHash.put("UpdateInsightImage", UpdateInsightImageReactor.class);
 		reactorHash.put("GetCurrentRecipe", GetCurrentRecipeReactor.class);
 		reactorHash.put("RetrieveInsightPipeline", RetrieveInsightPipelineReactor.class);
-		
+
 		// Save Reactors
 		reactorHash.put("SaveInsight", SaveInsightReactor.class);
 		reactorHash.put("UpdateInsight", UpdateInsightReactor.class);
@@ -1008,18 +982,18 @@ public class ReactorFactory {
 		reactorHash.put("RunOutlier", RunOutlierReactor.class);
 		reactorHash.put("Ratio", RatioReactor.class);
 		reactorHash.put("RunAnomaly", RunAnomalyReactor.class);
-		
+
 		// X-Ray reactors
 //		reactorHash.put("RunXray", RunXRayReactor.class);
 		reactorHash.put("GetXrayConfigList", GetXrayConfigListReactor.class);
 		reactorHash.put("GetXrayConfigFile", GetXrayConfigFileReactor.class);
 		reactorHash.put("GetLocalSchema", GetLocalSchemaReactor.class);
 		reactorHash.put("GetXLSchema", GetXLSchemaReactor.class);
-		reactorHash.put("GetCSVSchema",GetCSVSchemaReactor.class);
+		reactorHash.put("GetCSVSchema", GetCSVSchemaReactor.class);
 //		reactorHash.put("GetExternalSchema", GetExternalSchemaReactor.class);
 //		reactorHash.put("XrayMetamodel", XrayMetamodelReactor.class);
 //		reactorHash.put("MetaSemanticSimilarity", MetaSemanticSimilarityReactor.class);
-		
+
 		reactorHash.put("SemanticBlending", SemanticBlendingReactor.class);
 		reactorHash.put("SemanticDescription", SemanticDescription.class);
 		// similar reactors to x-ray
@@ -1036,7 +1010,7 @@ public class ReactorFactory {
 		reactorHash.put("StoreValue", StoreValue.class);
 		reactorHash.put("RetrieveValue", RetrieveValue.class);
 		reactorHash.put("GraphPlan", GraphPlanReactor.class);
-		
+
 		// Git it
 		reactorHash.put("InitAppRepo", InitAppRepo.class);
 		reactorHash.put("AddAppCollaborator", AddAppCollaborator.class);
@@ -1059,7 +1033,7 @@ public class ReactorFactory {
 		reactorHash.put("DeleteAsset", prerna.util.git.reactors.DeleteAssetReactor.class);
 		reactorHash.put("SyncAppO", SyncAppOReactor.class);
 		reactorHash.put("SyncAppFilesO", SyncAppFilesO.class);
-		
+
 		// App Metadata
 //		reactorHash.put("MyApps", MyAppsReactor.class);
 		reactorHash.put("MyDatabases", MyDatabasesReactor.class);
@@ -1080,10 +1054,10 @@ public class ReactorFactory {
 		reactorHash.put("OpenDatabase", OpenDatabaseReactor.class);
 		reactorHash.put("CleanUpDatabases", CleanUpDatabasesReactor.class);
 		reactorHash.put("Version", VersionReactor.class);
-		//reactorHash.put("PullCloudApp", PullCloudAppReactor.class);
-		//reactorHash.put("SyncRedis", SyncRedisReactor.class);
-		//reactorHash.put("PullUserSpace", PullUserSpaceReactor.class);
-		
+		// reactorHash.put("PullCloudApp", PullCloudAppReactor.class);
+		// reactorHash.put("SyncRedis", SyncRedisReactor.class);
+		// reactorHash.put("PullUserSpace", PullUserSpaceReactor.class);
+
 		// User Space
 		reactorHash.put("UploadUserFile", UploadUserFileReactor.class);
 		reactorHash.put("UserDir", UserDirReactor.class);
@@ -1106,36 +1080,36 @@ public class ReactorFactory {
 		reactorHash.put("GetDatabasesByDescription", GetDatabasesByDescriptionReactor.class);
 		reactorHash.put("UpdateNLPHistory", UpdateNLPHistoryReactor.class);
 		reactorHash.put("NLSQueryHelper", NLSQueryHelperReactor.class);
-		
+
 		// Forms
 		reactorHash.put("UpdateForm", UpdateFormReactor.class);
-		
+
 		// Pixels for legacy playsheets
 		reactorHash.put("RunPlaysheetMethod", prerna.reactor.legacy.playsheets.RunPlaysheetMethodReactor.class);
 		reactorHash.put("RunPlaysheet", prerna.reactor.legacy.playsheets.RunPlaysheetReactor.class);
 		reactorHash.put("GetPlaysheetParams", prerna.reactor.legacy.playsheets.GetPlaysheetParamsReactor.class);
-		
-		//LSA
+
+		// LSA
 		reactorHash.put("LSASpaceColumnLearned", LSASpaceColumnLearnedReactor.class);
-		reactorHash.put("RunLSILearned", RunLSILearnedReactor.class); 
-		//reactorHash.put("LSADescriptionAdd", LSADescriptionAddReactor.class); 
-		//reactorHash.put("CreateCriteriaFromText", CreateCriteriaFromTextReactor.class); 
-		//reactorHash.put("LSASpaceColumn", LSASpaceColumnReactor.class); 
-		//reactorHash.put("RunLSI", RunLSIReactor.class); 
-		
+		reactorHash.put("RunLSILearned", RunLSILearnedReactor.class);
+		// reactorHash.put("LSADescriptionAdd", LSADescriptionAddReactor.class);
+		// reactorHash.put("CreateCriteriaFromText",
+		// CreateCriteriaFromTextReactor.class);
+		// reactorHash.put("LSASpaceColumn", LSASpaceColumnReactor.class);
+		// reactorHash.put("RunLSI", RunLSIReactor.class);
+
 		// General Code Execution
 		reactorHash.put("Java", JavaReactor.class);
-		
+
 		// Pixel Recipe Parsing / Manipulation
 		reactorHash.put("GetInsightDatasources", GetInsightDatasourcesReactor.class);
 		reactorHash.put("ModifyInsightDatasource", ModifyInsightDatasourceReactor.class);
 		reactorHash.put("GetOptimizedRecipe", GetOptimizedRecipeReactor.class);
-		
-		
+
 		// web scrape engine
 		reactorHash.put("GetTableHeader", GetTableHeader.class);
 		reactorHash.put("GetNumTable", GetNumTableReactor.class);
-		
+
 		// Tax specific handles
 //		reactorHash.put("LoadClient", LoadClientReactor.class);
 //		reactorHash.put("RunPlan", RunPlanReactor.class);
@@ -1143,13 +1117,13 @@ public class ReactorFactory {
 //		reactorHash.put("TaxRetrieveValue", TaxRetrieveValue2.class);
 //		reactorHash.put("RunAliasMatch", RunAliasMatchReactor.class);
 //		reactorHash.put("SaveTaxScenario", SaveTaxScenarioReactor.class);
-		
+
 		// bitly
 		reactorHash.put("badd", BaddReactor.class);
 		reactorHash.put("bupd", BupdReactor.class);
 		reactorHash.put("bdel", BDelReactor.class);
 		reactorHash.put("bq", BQReactor.class);
-		
+
 		// Dates
 		reactorHash.put("DATE", DateReactor.class);
 		reactorHash.put("DAY", DayReactor.class);
@@ -1158,11 +1132,11 @@ public class ReactorFactory {
 		reactorHash.put("YEAR", YearReactor.class);
 	}
 
-	private static void populateNativeFrameHash(Map<String, Class> nativeFrameHash) {
+	private static void populateNativeFrameHash(Map<String, Class<? extends IReactor>> nativeFrameHash) {
 
 	}
 
-	private static void populateH2FrameHash(Map<String, Class> h2FrameHash) {
+	private static void populateH2FrameHash(Map<String, Class<? extends IReactor>> h2FrameHash) {
 		h2FrameHash.put("AddColumn", prerna.reactor.frame.rdbms.AddColumnReactor.class);
 		h2FrameHash.put("ChangeColumnType", prerna.reactor.frame.rdbms.ChangeColumnTypeReactor.class);
 		h2FrameHash.put("CountIf", prerna.reactor.frame.rdbms.CountIfReactor.class);
@@ -1179,7 +1153,7 @@ public class ReactorFactory {
 		h2FrameHash.put("TrimColumns", prerna.reactor.frame.rdbms.TrimColumnReactor.class);
 	}
 
-	private static void populateRFrameHash(Map<String, Class> rFrameHash) {
+	private static void populateRFrameHash(Map<String, Class<? extends IReactor>> rFrameHash) {
 		rFrameHash.put("AddColumn", prerna.reactor.frame.r.AddColumnReactor.class);
 		rFrameHash.put("AutoCleanColumn", prerna.reactor.frame.r.AutoCleanColumnReactor.class);
 		rFrameHash.put("ChangeColumnType", prerna.reactor.frame.r.ChangeColumnTypeReactor.class);
@@ -1217,18 +1191,21 @@ public class ReactorFactory {
 		rFrameHash.put("DescriptiveStats", prerna.reactor.frame.r.DescriptiveStatsReactor.class);
 		rFrameHash.put("SummaryStats", prerna.reactor.frame.r.SummaryStatsReactor.class);
 		rFrameHash.put("Histogram", prerna.reactor.frame.r.HistogramReactor.class);
-		
+
 		// algorithms
 		rFrameHash.put("RunAssociatedLearning", prerna.reactor.frame.r.analytics.RunAssociatedLearningReactor.class);
 		rFrameHash.put("RunClassification", prerna.reactor.frame.r.analytics.RunClassificationReactor.class);
 		rFrameHash.put("RunClustering", prerna.reactor.frame.r.analytics.RunClusteringReactor.class);
-		rFrameHash.put("RunDescriptionGenerator", prerna.reactor.frame.r.analytics.RunDescriptionGeneratorReactor.class);
+		rFrameHash.put("RunDescriptionGenerator",
+				prerna.reactor.frame.r.analytics.RunDescriptionGeneratorReactor.class);
 		rFrameHash.put("RunDocCosSimilarity", prerna.reactor.frame.r.analytics.RunDocCosSimilarityReactor.class);
 		rFrameHash.put("RunDocumentSummarization", prerna.reactor.algorithms.RunDocumentSummarizationReactor.class);
 		rFrameHash.put("RunLOF", prerna.reactor.frame.r.analytics.RunLOFReactor.class);
 		rFrameHash.put("RunMatrixRegression", prerna.reactor.frame.r.analytics.RunMatrixRegressionReactor.class);
-		rFrameHash.put("RunNumericalColumnSimilarity", prerna.reactor.frame.r.analytics.RunNumericalColumnSimilarityReactor.class);
-		rFrameHash.put("RunNumericalCorrelation", prerna.reactor.frame.r.analytics.RunNumericalCorrelationReactor.class);
+		rFrameHash.put("RunNumericalColumnSimilarity",
+				prerna.reactor.frame.r.analytics.RunNumericalColumnSimilarityReactor.class);
+		rFrameHash.put("RunNumericalCorrelation",
+				prerna.reactor.frame.r.analytics.RunNumericalCorrelationReactor.class);
 		rFrameHash.put("RunNumericalModel", prerna.reactor.frame.r.analytics.RunNumericalModelReactor.class);
 		rFrameHash.put("RunOutlier", prerna.reactor.frame.r.analytics.RunOutlierReactor.class);
 		rFrameHash.put("RunRandomForest", prerna.reactor.frame.r.analytics.RunRandomForestReactor.class);
@@ -1240,11 +1217,11 @@ public class ReactorFactory {
 //		rFrameHash.put("MetaSemanticSimilarity", prerna.sablecc2.reactor.frame.r.MetaSemanticSimilarityReactor.class);
 
 		// data quality rectors
-		rFrameHash.put("RunDataQuality",RunDataQualityReactor.class);
+		rFrameHash.put("RunDataQuality", RunDataQualityReactor.class);
 		rFrameHash.put("GetDQRules", GetDQRulesReactor.class);
 	}
 
-	private static void populateTinkerFrameHash(Map<String, Class> tinkerFrameHash) {
+	private static void populateTinkerFrameHash(Map<String, Class<? extends IReactor>> tinkerFrameHash) {
 		tinkerFrameHash.put("ConnectedNodes", ConnectedNodesReactor.class);
 		tinkerFrameHash.put("RemoveIntermediaryNode", RemoveIntermediaryNodeReactor.class);
 		tinkerFrameHash.put("FindPathsConnectingNodes", FindPathsConnectingNodesReactor.class);
@@ -1254,8 +1231,8 @@ public class ReactorFactory {
 		tinkerFrameHash.put("ClusterGraph", ClusterGraphReactor.class);
 		tinkerFrameHash.put("NodeDetails", NodeDetailsReactor.class);
 	}
-	
-	private static void populatePandasFrameHash(Map<String, Class> pandasFrameHash) {
+
+	private static void populatePandasFrameHash(Map<String, Class<? extends IReactor>> pandasFrameHash) {
 		pandasFrameHash.put("ToUpperCase", prerna.reactor.frame.py.ToUpperCaseReactor.class);
 		pandasFrameHash.put("ToLowerCase", prerna.reactor.frame.py.ToLowerCaseReactor.class);
 		pandasFrameHash.put("ToProperCase", prerna.reactor.frame.py.ToProperCaseReactor.class);
@@ -1276,14 +1253,14 @@ public class ReactorFactory {
 		pandasFrameHash.put("MatchColumnValues", prerna.reactor.frame.py.MatchColumnValuesReactor.class);
 		pandasFrameHash.put("Collapse", prerna.reactor.frame.py.CollapseReactor.class);
 		pandasFrameHash.put("JoinColumns", prerna.reactor.frame.py.JoinColumnsReactor.class);
-		
+
 		// frame stats
 		pandasFrameHash.put("ColumnCount", prerna.reactor.frame.py.ColumnCountReactor.class);
 		pandasFrameHash.put("Histogram", prerna.reactor.frame.py.ColumnCountReactor.class);
 		pandasFrameHash.put("DescriptiveStats", prerna.reactor.frame.py.DescriptiveStatsReactor.class);
 	}
 
-	private static void populateExpressionSet(Map<String, Class> expressionHash) {
+	private static void populateExpressionSet(Map<String, Class<? extends IReactor>> expressionHash) {
 		// excel like operations
 		expressionHash.put("SUM", OpSum.class);
 		expressionHash.put("AVERAGE", OpMean.class);
@@ -1311,7 +1288,7 @@ public class ReactorFactory {
 		expressionHash.put("ISOBJECTEMPTY", OpIsObjectEmpty.class);
 		expressionHash.put("ASSTRING", OpAsString.class);
 		expressionHash.put("CONCAT", OpConcat.class);
-		
+
 		// none excel functions
 		// If is in its own category
 		expressionHash.put("IF", IfReactor.class);
@@ -1323,29 +1300,52 @@ public class ReactorFactory {
 	}
 
 	/**
+	 * Get the new reactor instance. Attempts to first create the reactor from the
+	 * project context
 	 * 
+	 * @param insight
 	 * @param reactorId
-	 *            - reactor name
-	 * @param nodeString
-	 *            - pixel
-	 * @param frame
-	 *            - frame we will be operating on
 	 * @param parentReactor
-	 *            - the parent reactor
+	 * @param frame
+	 * @return
+	 */
+	public static IReactor getReactor(Insight insight, String reactorId, IReactor parentReactor,
+			ITableDataFrame frame) {
+		if (insight != null) {
+			IReactor insightReactor = insight.getReactor(reactorId);
+			if (insightReactor != null) {
+				return insightReactor;
+			}
+		}
+		if (frame == null && insight != null) {
+			frame = (ITableDataFrame) insight.getDataMaker();
+		}
+
+		return getReactor(reactorId, frame, parentReactor);
+	}
+
+	/**
+	 * 
+	 * @param reactorId     - reactor name
+	 * @param frame         - frame we will be operating on
+	 * @param parentReactor - the parent reactor
 	 * @return
 	 * 
-	 * 		This will simply return the IReactor responsible for execution
-	 *         based on the reactorId
+	 *         This will simply return the IReactor responsible for execution based
+	 *         on the reactorId
 	 * 
-	 *         Special case: if we are dealing with an expression, we determine
-	 *         if this expression is part of a select query or should be reduced
-	 *         If it is a reducing expression we 1. create an expr reactor 2.
-	 *         grab the reducing expression reactor from the frame 3. set that
-	 *         reactor to the expr reactor and return the expr reactor The expr
-	 *         reactor when executed will use that reducing expression reactor
-	 *         to evaluate
+	 *         Special case: if we are dealing with an expression, we determine if
+	 *         this expression is part of a select query or should be reduced If it
+	 *         is a reducing expression we 1. create an expr reactor 2. grab the
+	 *         reducing expression reactor from the frame 3. set that reactor to the
+	 *         expr reactor and return the expr reactor The expr reactor when
+	 *         executed will use that reducing expression reactor to evaluate
+	 * @throws SecurityException
+	 * @throws NoSuchMethodException
+	 * @throws InvocationTargetException
+	 * @throws IllegalArgumentException
 	 */
-	public static IReactor getReactor(String reactorId, String nodeString, ITableDataFrame frame, IReactor parentReactor) {
+	public static IReactor getReactor(String reactorId, ITableDataFrame frame, IReactor parentReactor) {
 		IReactor reactor = null;
 
 		try {
@@ -1354,91 +1354,98 @@ public class ReactorFactory {
 			// reducer or as a selector
 			if (expressionHash.containsKey(reactorId.toUpperCase())) {
 				// if this expression is not a selector
-				if (!(parentReactor instanceof AbstractQueryStructReactor) && 
-						!(parentReactor instanceof QuerySelectorExpressionAssimilator)) {
-					reactor = (IReactor) expressionHash.get(reactorId.toUpperCase()).newInstance();
-					reactor.setPixel(reactorId, nodeString);
+				if (parentReactor != null) {
+					if (!(parentReactor instanceof AbstractQueryStructReactor)
+							&& !(parentReactor instanceof QuerySelectorExpressionAssimilator)) {
+						reactor = expressionHash.get(reactorId.toUpperCase()).getDeclaredConstructor().newInstance();
+						return reactor;
+					}
+				} else {
+					reactor = expressionHash.get(reactorId.toUpperCase()).getDeclaredConstructor().newInstance();
 					return reactor;
 				}
 			}
-			
+
 			// see if it is a frame specific reactor
 			if (frame != null) {
 				// identify the correct hash to use
 				if (frame instanceof AbstractRdbmsFrame) {
 					// see if the hash contains the reactor id
 					if (h2FrameHash.containsKey(reactorId)) {
-						reactor = (IReactor) h2FrameHash.get(reactorId).newInstance();
+						reactor = h2FrameHash.get(reactorId).getDeclaredConstructor().newInstance();
 					}
 				} else if (frame instanceof RDataTable) {
 					if (rFrameHash.containsKey(reactorId)) {
-						reactor = (IReactor) rFrameHash.get(reactorId).newInstance();
+						reactor = rFrameHash.get(reactorId).getDeclaredConstructor().newInstance();
 					}
 				} else if (frame instanceof TinkerFrame) {
 					if (tinkerFrameHash.containsKey(reactorId)) {
-						reactor = (IReactor) tinkerFrameHash.get(reactorId).newInstance();
+						reactor = tinkerFrameHash.get(reactorId).getDeclaredConstructor().newInstance();
 					}
 				} else if (frame instanceof NativeFrame) {
 					if (nativeFrameHash.containsKey(reactorId)) {
-						reactor = (IReactor) nativeFrameHash.get(reactorId).newInstance();
+						reactor = nativeFrameHash.get(reactorId).getDeclaredConstructor().newInstance();
 					}
-				} else if(frame instanceof PandasFrame) {
+				} else if (frame instanceof PandasFrame) {
 					if (pandasFrameHash.containsKey(reactorId)) {
-						reactor = (IReactor) pandasFrameHash.get(reactorId).newInstance();
+						reactor = pandasFrameHash.get(reactorId).getDeclaredConstructor().newInstance();
 					}
 				}
-				
+
 				// if we have retrieved a reactor from a frame hash
 				if (reactor != null) {
-					reactor.setPixel(reactorId, nodeString);
 					return reactor;
 				}
 			}
-
 
 			// see if it is a generic one
 			// if not an expression
 			// search in the normal reactor hash
 			if (reactorHash.containsKey(reactorId)) {
-				reactor = (IReactor) reactorHash.get(reactorId).newInstance();
-				reactor.setPixel(reactorId, nodeString);
+				reactor = reactorHash.get(reactorId).getDeclaredConstructor().newInstance();
 				return reactor;
 			}
-		} catch (InstantiationException | IllegalAccessException e) {
+		} catch (Exception e) {
 			classLogger.error(Constants.STACKTRACE, e);
 		}
-		
+
 		/*
-		 * I want to account for various functions that a person wants to execute
-		 * I will just create this as a generic function reactor 
-		 * that creates a function selector to return 
+		 * I want to account for various functions that a person wants to execute I will
+		 * just create this as a generic function reactor that creates a function
+		 * selector to return
 		 */
-		if (parentReactor instanceof AbstractQueryStructReactor || parentReactor instanceof QuerySelectorExpressionAssimilator) {
-			reactor = new GenericSelectorFunctionReactor();
-			reactor.setPixel(reactorId, nodeString);
-			// set the fuction name
-			((GenericSelectorFunctionReactor) reactor).setFunction(reactorId);
-			return reactor;
+		if (parentReactor != null) {
+			if (parentReactor instanceof AbstractQueryStructReactor
+					|| parentReactor instanceof QuerySelectorExpressionAssimilator) {
+				reactor = new GenericSelectorFunctionReactor();
+				// set the fuction name
+				((GenericSelectorFunctionReactor) reactor).setFunction(reactorId);
+				return reactor;
+			}
 		}
-		
+
 		// ughhh... idk what you are trying to do
 		throw new IllegalArgumentException("Cannot find reactor for keyword = " + reactorId);
 	}
-	
+
+	/**
+	 * 
+	 * @param reactorId
+	 * @return
+	 */
 	public static boolean hasReactor(String reactorId) {
 		return reactorHash.containsKey(reactorId) || expressionHash.containsKey(reactorId.toUpperCase());
 	}
-	
+
 	/**
 	 * This method takes in a prop file to build the reactorHash
 	 * 
-	 * @param propFile
-	 *            - the path to the prop file with the reactor names and classes
-	 * @param reactorHash
-	 *            - the specific reactor hash object that we are building
+	 * @param propFile    - the path to the prop file with the reactor names and
+	 *                    classes
+	 * @param reactorHash - the specific reactor hash object that we are building
 	 * 
 	 */
-	public static void buildReactorHashFromPropertyFile(Map<String, Class> hash, String propFile) {
+	public static void buildReactorHashFromPropertyFile(Map<String, Class<? extends IReactor>> hash, String propFile) {
 		// move info from the prop file into a Properties object
 		Properties properties = Utility.loadProperties(propFile);
 		// for each line in the file
@@ -1455,34 +1462,41 @@ public class ReactorFactory {
 			}
 		}
 	}
-	
+
 	/**
-	 * Loads the JSON for additional reactors
-	 * IF NAMES COLLIDE, THE PROP FILE WILL TAKE PRECEDENCE
-	 * @param jsonFile 
+	 * Loads the JSON for additional reactors IF NAMES COLLIDE, THE PROP FILE WILL
+	 * TAKE PRECEDENCE
+	 * 
+	 * @param jsonFile
 	 * 
 	 */
 	private static void loadAdditionalReactor(File jsonFile) {
 		Map<String, Map<String, String>> jsonData = null;
 		try {
 			jsonData = new ObjectMapper().readValue(jsonFile, Map.class);
-		} catch(Exception e) {
+		} catch (Exception e) {
 			// oops...
 			System.out.println("COULDN'T LOAD JSON FILE FOR ADDITIOANL REACTORS!!!!!");
 		}
-		if(jsonData != null) {
-			for(String key : jsonData.keySet()) {
-				Map<String, Class> hash = getReactorsForType(key);
-				if(hash != null) {
+		if (jsonData != null) {
+			for (String key : jsonData.keySet()) {
+				Map<String, Class<? extends IReactor>> hash = getReactorsForType(key);
+				if (hash != null) {
 					Map<String, String> reactorNameToClass = jsonData.get(key);
-					for(String reactorName : reactorNameToClass.keySet()) {
+					for (String reactorName : reactorNameToClass.keySet()) {
 						String classname = reactorNameToClass.get(reactorName);
-						Class reactor;
 						try {
-							reactor = (Class.forName(classname));
-							hash.put(reactorName, reactor);
+							// Load the class
+							Class<?> rawClass = Class.forName(classname);
+							// Verify it implements IReactor before casting
+							if (IReactor.class.isAssignableFrom(rawClass)) {
+								@SuppressWarnings("unchecked")
+								Class<? extends IReactor> reactorClass = (Class<? extends IReactor>) rawClass;
+								hash.put(reactorName, reactorClass);
+							} else {
+								classLogger.warn("Class " + classname + " does not implement IReactor interface!");
+							}
 						} catch (ClassNotFoundException e) {
-							classLogger.warn("COULDN'T FIND THE REACTOR! " + classname);
 							classLogger.error(Constants.STACKTRACE, e);
 						}
 					}
@@ -1490,23 +1504,23 @@ public class ReactorFactory {
 			}
 		}
 	}
-	
-	private static Map<String, Class> getReactorsForType(String key) {
+
+	private static Map<String, Class<? extends IReactor>> getReactorsForType(String key) {
 		key = key.toUpperCase();
-		if(key.equals("GENERAL")) {
+		if (key.equals("GENERAL")) {
 			return reactorHash;
-		} else if(key.equals("H2")) {
+		} else if (key.equals("H2")) {
 			return h2FrameHash;
-		} else if(key.equals("R")) {
+		} else if (key.equals("R")) {
 			return rFrameHash;
-		} else if(key.equals("PY")) {
+		} else if (key.equals("PY")) {
 			return pandasFrameHash;
-		} else if(key.equals("NATIVE")) {
+		} else if (key.equals("NATIVE")) {
 			return nativeFrameHash;
-		} else if(key.equals("TINKER")) {
+		} else if (key.equals("TINKER")) {
 			return tinkerFrameHash;
 		}
 		return null;
 	}
-	
+
 }
